<resources>
    <string name="app_name">ServicioWebProfesores</string>

    <string name="apellidos">Surname</string>
    <string name="contraseña">Password</string>
    <string name="guardar">Save</string>
    <string name="volver">Back</string>
    <string name="nombre">Name</string>
    <string name="lblOpcion">Choose a Profile to Enter</string>
    <string name="txtPa">New Password</string>
    <string name="btnMostrarPro">See Teachers</string>
    <string name="btnVerAulas">See Classrooms</string>
    <string name="btnVerEquipos">See Computers</string>
    <string name="btnAñadirProfe">+ Teacher</string>
    <string name="btnAñadirAula">+ Classrooms</string>
    <string name="btnAñadirEquipo">+ Computer</string>
    <string name="textView6">Welcome:</string>
    <string name="cbProfe">Teacher</string>
    <string name="cbEncargado">Manager</string>
    <string name="cbJefe">Boss</string>
    <string name="textView12">Previous Classroom</string>
    <string name="textView4">Classroom</string>
    <string name="textView5">ID Computer</string>
    <string name="textView7">Computer Processing Unit</string>
    <string name="textView10">Display Unit</string>
    <string name="rbSi">YES</string>
    <string name="rbNo">NO</string>
    <string name="lblCodAula">Classroom Code</string>
    <string name="textView">Current Assigned Teacher</string>
    <string name="textView2">Assigned Teacher</string>
    <string name="lblDescrip">Description</string>
    <string name="btnCPass">Change Password</string>


</resources>